--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -1,15 +1,18 @@
 recipe:
     thousands: '{nbDays} jours'
+    thousandsName: 'Nombre de jours depuis une date'
     minutes: '{nbMinutes, number} minutes'
     planet-revolutions: '{count, ordinal} révolution de {object} '
     planet-revolution: '{count, selectordinal, one {#ère} other {#ème}} révolution de {object}'
+    planet-revolutionsName: 'Nombre de révolutions des planètes depuis une date'
     now: 'Maintenant'
-    averageAgeFirstChildren: "Age moyen des femmes à la naissance du 1er enfant dans l'OCDE en 2022"
+    averageAgeFirstChildren: "Age moyen des femmes à la naissance du 1er enfant dans l'OCDE"
     sleep-time: '{
         nbYears,
         plural,
         =1 {1 année passée} other {# années passées}
     } à dormir'
+    sleep-timeName: 'Durée estimée de sommeil en année depuis une date'
     planet:
         mercury: Mercure
         venus: Venus
@@ -21,6 +24,9 @@ recipe:
         neptune: Neptune
         pluto: Pluton
     billionSeconds: '{nbBSeconds, number} {nbBSeconds, selectordinal, one {milliard} other {milliards}} de secondes'
+    billionSecondsName: 'Milliards de secondes depuis une date'
+    daysFromBirthDateName: 'Jours depuis une date'
+    millionMinutesName: 'Million de minutes depuis une date'
 events:
     title: 'Evenements basés sur une date de naissance le {birthdate, date}'
     what: 'Quoi'
